indopacific-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: indopacific-ingress
  namespace: coreapps
 
  annotations:
    # kubernetes.io/tls-acme: "true"
    # nginx.ingress.kubernetes.io/app-root: /get_data.php
    kubernetes.io/ingress.class: "indopacific-ingress"    
    cert-manager.io/cluster-issuer: "letsencrypt-prod-indopacific"
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - indopacific.iplon.co.in
    secretName: indopacific-tls-prod

  rules:
  - host: indopacific.iplon.co.in
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: iplon-apache-indopacific
            port: 
              number: 8080
